--- a/SwiftParrotMinidrone/Base.lproj/Main.storyboard
+++ b/SwiftParrotMinidrone/Base.lproj/Main.storyboard
@@ -570,10 +570,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TKp-Ja-k0q" customClass="H264ImageView">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4at-i6-Sv9">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </view>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ULg-xg-OdJ">
                                 <rect key="frame" x="265" y="69" width="100" height="40"/>
                                 <color key="backgroundColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -899,14 +899,12 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="5uM-67-gj0" firstAttribute="top" secondItem="TKp-Ja-k0q" secondAttribute="bottom" id="0E0-HH-kO1"/>
                             <constraint firstItem="Q9k-VD-wXr" firstAttribute="top" secondItem="0sh-ve-vso" secondAttribute="bottom" constant="5" id="0ch-4L-ais"/>
                             <constraint firstItem="lej-gZ-iB4" firstAttribute="leading" secondItem="vPQ-Nc-biI" secondAttribute="trailing" constant="10" id="1Fn-er-k3J"/>
                             <constraint firstItem="vPQ-Nc-biI" firstAttribute="leading" secondItem="YZg-Hh-a0u" secondAttribute="trailing" constant="10" id="1Y8-GQ-X31"/>
                             <constraint firstItem="ow4-1y-cRx" firstAttribute="leading" secondItem="erB-tN-IVD" secondAttribute="leading" constant="5" id="1h7-3c-Jwx"/>
                             <constraint firstAttribute="centerY" secondItem="bFN-Qk-0Ka" secondAttribute="centerY" id="2co-yQ-ftf"/>
                             <constraint firstItem="sVM-km-OGK" firstAttribute="top" secondItem="W2S-tl-xfr" secondAttribute="bottom" constant="10" id="4S0-ev-Xd9"/>
-                            <constraint firstAttribute="trailing" secondItem="TKp-Ja-k0q" secondAttribute="trailing" id="5uV-YV-NyA"/>
                             <constraint firstAttribute="centerY" secondItem="sVM-km-OGK" secondAttribute="centerY" id="6Nh-x0-ecm"/>
                             <constraint firstItem="sVM-km-OGK" firstAttribute="leading" secondItem="kCX-vy-yeL" secondAttribute="leadingMargin" constant="5" id="6Op-Gf-Pzj"/>
                             <constraint firstAttribute="trailing" secondItem="ULg-xg-OdJ" secondAttribute="trailing" constant="10" id="6dI-90-RFj"/>
@@ -919,12 +917,14 @@
                             <constraint firstItem="5uM-67-gj0" firstAttribute="top" secondItem="NCA-sq-Dj5" secondAttribute="bottom" constant="5" id="FlF-ps-60J"/>
                             <constraint firstItem="4u9-kt-4R1" firstAttribute="top" secondItem="V1n-OP-SZp" secondAttribute="bottom" constant="10" id="GcT-dj-am0"/>
                             <constraint firstAttribute="centerY" secondItem="vPQ-Nc-biI" secondAttribute="centerY" constant="50" id="H34-8d-K1A"/>
+                            <constraint firstItem="4at-i6-Sv9" firstAttribute="leading" secondItem="erB-tN-IVD" secondAttribute="leading" id="HJs-pZ-lGz"/>
                             <constraint firstItem="Wfh-nB-Zjl" firstAttribute="width" secondItem="W2S-tl-xfr" secondAttribute="width" id="HyS-WX-mIn"/>
                             <constraint firstItem="hC6-Df-N6f" firstAttribute="centerY" secondItem="YZg-Hh-a0u" secondAttribute="centerY" id="Its-3z-Mri"/>
-                            <constraint firstItem="TKp-Ja-k0q" firstAttribute="top" secondItem="0sh-ve-vso" secondAttribute="bottom" id="KXc-lr-m0X"/>
                             <constraint firstItem="ynf-3H-LiR" firstAttribute="width" secondItem="W2S-tl-xfr" secondAttribute="width" id="KiM-MS-fjC"/>
                             <constraint firstAttribute="centerX" secondItem="QA4-nm-QUN" secondAttribute="centerX" id="OKc-Dz-uHo"/>
+                            <constraint firstItem="erB-tN-IVD" firstAttribute="bottom" secondItem="4at-i6-Sv9" secondAttribute="bottom" id="QNs-6C-sx9"/>
                             <constraint firstItem="Zo7-7V-VHO" firstAttribute="top" secondItem="NCA-sq-Dj5" secondAttribute="top" id="RQe-GB-woO"/>
+                            <constraint firstItem="erB-tN-IVD" firstAttribute="trailing" secondItem="4at-i6-Sv9" secondAttribute="trailing" id="RiR-9s-GMz"/>
                             <constraint firstAttribute="centerY" secondItem="GWz-7c-3PM" secondAttribute="centerY" id="SA1-bS-8d2"/>
                             <constraint firstItem="ynf-3H-LiR" firstAttribute="top" secondItem="GWz-7c-3PM" secondAttribute="bottom" id="T3c-nN-FgP"/>
                             <constraint firstItem="bFN-Qk-0Ka" firstAttribute="height" secondItem="W2S-tl-xfr" secondAttribute="height" id="TJ1-aL-YB7"/>
@@ -952,6 +952,7 @@
                             <constraint firstItem="Wfh-nB-Zjl" firstAttribute="height" secondItem="W2S-tl-xfr" secondAttribute="height" id="hOF-De-pQK"/>
                             <constraint firstItem="V1n-OP-SZp" firstAttribute="top" secondItem="0sh-ve-vso" secondAttribute="bottom" constant="5" id="j0S-kH-MMn"/>
                             <constraint firstItem="YZg-Hh-a0u" firstAttribute="top" secondItem="vPQ-Nc-biI" secondAttribute="bottom" constant="10" id="kaV-9Z-1IY"/>
+                            <constraint firstItem="4at-i6-Sv9" firstAttribute="top" secondItem="erB-tN-IVD" secondAttribute="top" id="lRs-dG-AFG"/>
                             <constraint firstAttribute="centerY" secondItem="YZg-Hh-a0u" secondAttribute="centerY" id="n7a-Ea-Cup"/>
                             <constraint firstItem="YZg-Hh-a0u" firstAttribute="width" secondItem="W2S-tl-xfr" secondAttribute="width" id="nXm-nV-3ob"/>
                             <constraint firstAttribute="trailingMargin" secondItem="vPQ-Nc-biI" secondAttribute="trailing" constant="55" id="neH-3g-YqV"/>
@@ -967,7 +968,6 @@
                             <constraint firstItem="GWz-7c-3PM" firstAttribute="centerX" secondItem="W2S-tl-xfr" secondAttribute="centerX" id="tih-w2-C5e"/>
                             <constraint firstItem="ULg-xg-OdJ" firstAttribute="top" secondItem="QA4-nm-QUN" secondAttribute="top" id="u20-hz-EuT"/>
                             <constraint firstItem="GWz-7c-3PM" firstAttribute="height" secondItem="W2S-tl-xfr" secondAttribute="height" id="xXH-iG-V9f"/>
-                            <constraint firstItem="TKp-Ja-k0q" firstAttribute="leading" secondItem="kCX-vy-yeL" secondAttribute="leading" id="xcR-vM-WGJ"/>
                             <constraint firstAttribute="centerY" secondItem="hC6-Df-N6f" secondAttribute="centerY" id="yU1-es-bun"/>
                             <constraint firstItem="W2S-tl-xfr" firstAttribute="leading" secondItem="sVM-km-OGK" secondAttribute="trailing" constant="10" id="yhf-Jd-TuK"/>
                             <constraint firstItem="vPQ-Nc-biI" firstAttribute="height" secondItem="W2S-tl-xfr" secondAttribute="height" id="zB4-oL-Ike"/>
@@ -976,8 +976,8 @@
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="U6Z-aS-vmh"/>
-                                <exclude reference="neH-3g-YqV"/>
                                 <exclude reference="H34-8d-K1A"/>
+                                <exclude reference="neH-3g-YqV"/>
                                 <exclude reference="8Bh-SK-d5d"/>
                                 <exclude reference="FPu-x8-Ahv"/>
                                 <exclude reference="TOl-JR-3dN"/>
@@ -993,6 +993,7 @@
                     <connections>
                         <outlet property="backButton" destination="ynf-3H-LiR" id="jDy-ke-CbM"/>
                         <outlet property="batteryLabel" destination="Q9k-VD-wXr" id="yth-dG-TcC"/>
+                        <outlet property="decodedImageView" destination="4at-i6-Sv9" id="oM2-Nd-b8r"/>
                         <outlet property="downButton" destination="Wfh-nB-Zjl" id="ild-tZ-vdw"/>
                         <outlet property="downloadMediasBt" destination="Zo7-7V-VHO" id="8NR-ys-p4C"/>
                         <outlet property="forwardButton" destination="W2S-tl-xfr" id="zdQ-c5-dGP"/>
@@ -1000,7 +1001,6 @@
                         <outlet property="speedLabel" destination="u7N-rj-acs" id="15x-tI-CGX"/>
                         <outlet property="takeOffLandBt" destination="NCA-sq-Dj5" id="d6N-xF-a5C"/>
                         <outlet property="upButton" destination="vPQ-Nc-biI" id="47Y-bb-6Ti"/>
-                        <outlet property="videoView" destination="TKp-Ja-k0q" id="RL8-hC-OE0"/>
                         <outlet property="yawLabel" destination="hC6-Df-N6f" id="agL-Wb-8S8"/>
                         <segue destination="Jrw-uG-4xq" kind="show" id="OvJ-KL-IlP"/>
                     </connections>
